force-app/main/default/objects/Unit__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <label>Bathrooms</label>
    <length>10</length>
    <type>Text</type>
</CustomField>