force-app/main/default/objects/Unit__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <label>Bedrooms</label>
    <length>10</length>
    <type>Text</type>
</CustomField>