force-app/main/default/objects/Unit__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property Name</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>