force-app/main/default/objects/Unit__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <label>Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>