force-app/main/default/objects/Unit__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <label>Rent Amount</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>